crud-rails-mysql/infra/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: crud-rails-mysql
  labels:
    app.kubernetes.io/part-of: crud-rails-mysql
    app.kubernetes.io/component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        app.kubernetes.io/part-of: crud-rails-mysql
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend
          image: __BUILD__backend
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: crud-rails-mysql
  labels:
    app.kubernetes.io/part-of: crud-rails-mysql
    app.kubernetes.io/component: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
