crud-rails-mysql/infra/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: crud-rails-mysql
  labels:
    app.kubernetes.io/part-of: crud-rails-mysql
    app.kubernetes.io/component: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        app.kubernetes.io/part-of: crud-rails-mysql
        app.kubernetes.io/component: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
              subPath: mysql
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-data
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: crud-rails-mysql
  labels:
    app.kubernetes.io/part-of: crud-rails-mysql
    app.kubernetes.io/component: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
